move styles to index; fix gap btwn icon and text

--- a/src/htdocs/css/_titleBar.scss
+++ b/src/htdocs/css/_titleBar.scss
@@ -25,7 +25,7 @@
     i {
       color: $text-color-lighter;
       font-size: 1.25rem;
-      right: -1.75rem;
+      right: -1.125rem;
       top: .75rem;
     }
   }
