--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -288,12 +288,6 @@
     margin: 0;
   }
 
-  i {
-    font-size: .875rem;
-    right: -1.125rem;
-    top: 0;
-  }
-
   img {
     border: 3px solid;
     border-radius: $content-border-radius;
